syntax = "proto3";

package eventmanager;

option go_package = "github.com/ceres919/simple-grpc/pkg/eventmanager";

service Events {
  rpc MakeEvent (MakeEventRequest) returns (EventIdResponse) {}
  rpc GetEvent (GetEventRequest) returns (EventResponse) {}
  rpc DeleteEvent (DeleteEventRequest) returns (EventIdResponse) {}
  rpc GetEvents (GetEventsRequest) returns (stream EventResponse) {}
}

message MakeEventRequest {
  int64 senderId = 1;
  int64 time = 2;
  string name = 3;
}

message GetEventRequest {
  int64 senderId = 1;
  int64 eventId = 2;
}

message DeleteEventRequest {
  int64 senderId = 1;
  int64 eventId = 2;
}

message GetEventsRequest {
  int64 senderId = 1;
  int64 from_time = 2;
  int64 to_time = 3;
}

message EventIdResponse {
  int64 eventId = 1;
}

message EventResponse {
  int64 senderId = 1;
  int64 eventId = 2;
  int64 time = 3;
  string name = 4;
}